# omni-tracer

./: LICENSE  README.md
omni-capture/src/: capture.cpp  capture.hpp  common.cpp  common.hpp  tracee.cpp  tracee.hpp  tracer.cpp  tracer.hpp
omni_gen/: CMakeLists.txt  Readme.md
omni_gen/src/: common.hpp  generator.cpp  generator.hpp  trace_input.cpp  trace_input.hpp
omni_gen/test/: main.cpp
